kubernetes/infrastructure/keycloak/httproute-keycloak.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
  - name: cloudflare-tunnel
    namespace: cloudflare-tunnel-system
    sectionName: https
  hostnames:
  - keycloak.alialjaffer.com
  rules:
  - backendRefs:
    - name: keycloak-service
      port: 8080
